# hotel

./: .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: ci.yml
booking/: models.py  serializers.py  views.py
booking/migrations/: 0001_initial.py  0002_alter_room_description_alter_room_price.py
hotel/: settings.py  urls.py  wsgi.py
tests/: test_api.py
